--- a/main.css
+++ b/main.css
@@ -1,9 +1,3 @@
-.header {
-    background-image: url('images/1.png');
-    background-size: cover;
-    background-position: center;
-    position: relative;
-}
 @media (max-width: 575.98px) {
     .description {
         left: 50%;
@@ -44,12 +38,12 @@
 }
 .description h1 {
 	color: #bea7ff;
+    font-size: 1rem;
 }
 .description p {
 	color: #fff;
 	font-size: 1.3rem;
 	line-height: 1.5;
-    
 }
 .caption p {
 	color: #fff;
