--- a/views/header.ejs
+++ b/views/header.ejs
@@ -2,16 +2,17 @@
     <div class="overlay"></div>
     <header class="container-fluid">
         <div class="row">
-        <div class="col-sm-4">
-            <div class = "d-flex justify-content-end">
-            <img src="../images/img.png" class="img-thumbnail" alt="image of meeeeeee">
+            <div class="col-sm-4">
+                <div class="d-flex justify-content-end">
+                    <img src="../images/img.png" class="img-thumbnail" alt="image of meeeeeee">
+                </div>
+            </div>
+
+            <div class="col-sm-6">
+                <div class="caption">
+                    <h1>Izabella Palange</h1>
+                    <p>Senior CS student at UAlbany! Enthusiast of video games, movies, television with an interest in
+                        IT and security!</p>
+                </div>
+            </div>
         </div>
-        </div>
-    
-    <div class="col-sm-6">
-        <div class="caption">
-            <h1>Izabella Palange</h1>
-            <p>Senior CS student at UAlbany! Enthusiast of video games, movies, television with an interest in IT and security!</p>
-        </div>
-    </div>
-</div>
