--- a/views/adding.ejs
+++ b/views/adding.ejs
@@ -1,10 +1,43 @@
+<header class="container">
 
-    <header class="container">
-                <h3>Add Two Numbers!</h3>
-            <form>
+    <body>
+        <%- include('navbar.ejs'); %>
+            <h3>Add Two Numbers!</h3>
+            <form method = "post" action="/add">
                 <label>FIRST NUMBER:</label>
-                <input id="number1" type="number"/>
+                <input id="number1" type="number" />
                 <label>SECOND NUMBER:</label>
-                <input id="number2" type="number"/>
+                <input id="number2" type="number" />
                 <input type="submit" value="ADD 'EM UP!" />
             </form>
+            <script src="/"></script>
+            <meta name="viewport" content="width=device-width, initial-scale=1">
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+                integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+                crossorigin="anonymous">
+            <link rel="stylesheet" type="text/css" href="../main.css">
+            <script>
+                document.body.addEventListener("submit", sendData);
+
+                function sendData(event) {
+                    event.preventDefault();
+                    const number1 = document.querySelector("#number1").value;
+                    const number2 = document.querySelector("#number2").value;
+                    fetch("/add", {
+                        method: "POST",
+                        headers: {
+                            'Content-Type': 'applications/json'
+                        },
+                        body: JSON.stringify({
+                            number1: parseInt(number1),
+                            number2: parseInt(number2)
+                        })
+                    })
+                        .then(res => res.json())
+                        .then(data => {
+                            document.write(number1 + number2);
+                        })
+                        .catch(err => console.log(err));
+                }
+            </script>
+    </body>
