--- a/views/adding.ejs
+++ b/views/adding.ejs
@@ -23,18 +23,17 @@
                     event.preventDefault();
                     const number1 = document.querySelector("#number1").value;
                     const number2 = document.querySelector("#number2").value;
-                    fetch("/add", {
+                    resultOfAdd = fetch("/add", {
                         method: "POST",
                         headers: {
                             'Content-Type': 'applications/json'
                         },
                         body: JSON.stringify({
                             number1: parseInt(number1),
-                            number2: parseInt(number2)
+                            number2: parseInt(number2),
                         })
                     })
-                        .then(res => res.json())
-                        .then(data => {
+                        .then(res => {
                             document.write(parseInt(number1) + parseInt(number2));
                         })
                         .catch(err => console.log(err));
