--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-sm-4">
                 <div class="d-flex justify-content-end">
-                    <img src="../images/img.png" class="img-thumbnail" alt="image of meeeeeee">
+                    <img src="https://myawsbucket-icsi418y.s3.amazonaws.com/1.png" class="img-thumbnail" alt="image of meeeeeee">
                 </div>
             </div>
 
