--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,14 +1,13 @@
-<header class="page-header header container-fluid">
-    <div class="overlay"></div>
-    <header class="container-fluid">
+<header class="page-header header container-fluid"> <!-- make a page header that changes dimensions with screen size -->
         <div class="row">
-            <div class="col-sm-4">
+            <div class="col-sm-4"> <!-- Boostrap uses a grid system, so make it a small size 6 column -->
                 <div class="d-flex justify-content-end">
+                    <!-- use image file from the AWS S3 bucket and make it a Boostrap 5 thumbnail -->
                     <img src="https://myawsbucket-icsi418y.s3.amazonaws.com/1.png" class="img-thumbnail" alt="image of meeeeeee">
                 </div>
             </div>
 
-            <div class="col-sm-6">
+            <div class="col-sm-6"> <!-- a small size 6 column -->
                 <div class="caption">
                     <h1>Izabella Palange</h1>
                     <p>Senior CS student at UAlbany! Enthusiast of video games, movies, television with an interest in
