--- a/views/adding.ejs
+++ b/views/adding.ejs
@@ -2,20 +2,28 @@
 
     <body>
         <%- include('navbar.ejs'); %>
-            <h3>Add Two Numbers!</h3>
+            <h3>Add Two Numbers!</h3> <!-- h3 for header text -->
+            <!-- use a POST request for html form. To POST, action is to use adding.ejs/add -->
             <form method="post" action="adding.ejs/add">
+                <!-- id set to number1 with type set to number -->
                 <label>FIRST NUMBER:</label>
                 <input id="number1" type="number" />
+
+                <!-- id set to number2 with type also set to number -->
                 <label>SECOND NUMBER:</label>
                 <input id="number2" type="number" />
+
+                <!-- button "ADD 'EM UP!" is a submit type so that it sends all data to javascript -->
                 <input type="submit" value="ADD 'EM UP!" />
             </form>
-            <script src="/"></script>
+            <!-- BOOTSTRAP 5 STYLE SHEETS! -->
             <meta name="viewport" content="width=device-width, initial-scale=1">
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
                 integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
                 crossorigin="anonymous">
             <link rel="stylesheet" type="text/css" href="../main.css">
+
+            <!-- This is where the adding feature gets computed! -->
             <script>
                 //listen for the submit button to be pressed
                 document.body.addEventListener("submit", sendData);
@@ -23,16 +31,17 @@
                 //function that handles the submit button
                 function sendData(event) {
                     event.preventDefault(); //prevent website from refreshing
+                    
                     //first number variable
                     const number1 = document.querySelector("#number1").value;
 
                     //second number variable
                     const number2 = document.querySelector("#number2").value;
 
-                    //result variable
+                    //result variable, use parseint to get actual numerical value
                     const result = parseInt(number1) + parseInt(number2);
 
-                    //fetch will use the post request function from the main website.js file
+                    //fetch will use the POST request function from the main website.js file
                     gettingAdd = fetch("/add", {
                         method: "POST",
                         headers: {
