--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,17 +1,18 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light"> <!-- make a white-themed navigation bar with fluid containers -->
   <div class="container-fluid">
-    <a class="navbar-brand" href="\">Fortuneye</a>
+    <a class="navbar-brand" href="\"> Fortuneye </a> <!-- branding is "Fortuneye" and set it to link back to main page -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="\">Home</a>
+          <!-- Create a button that links to the home page -->
+          <a class="nav-link active" aria-current="page" href="\">Home</a> 
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="adding.ejs">Adding Two Numbers</a>
+          <!-- Create a button that directs to the adding page -->
+          <a class="nav-link active" aria-current="page" href="adding.ejs">Adding Two Numbers</a> 
         </li>
       </ul>
     </div>
